# engineering-standards

./: .editorconfig  .gitattributes  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  cspell.json  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: docs.yml  lint.yml
docs/: index.md
docs/ai-ml/: index.md
docs/assets/stylesheets/: extra.css
docs/backend/: index.md  python-development-standards.md
docs/backend/python/: data-job.md  data-jobs.md  documentation-site.md  documentation-sites.md  general-core.md  general-standards.md  packages.md  python-package.md  web-service.md  web-services.md
docs/cicd/: index.md
docs/data-platform/: index.md
docs/infrastructure/: index.md
