[project]
name = "engineering-standards"
version = "1.0.0"
description = "Personal engineering standards and knowledge base."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.7.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.2",
    "pymdown-extensions>=10.17.2",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docs"]
