[project]
name = "engineering-standards"
version = "1.0.0"
description = "Personal engineering standards and knowledge base."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.7.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.2",
    "pymdown-extensions>=10.17.2",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "pyright>=1.1.407",
    "pre-commit>=4.5.0",
]

[project.urls]
Homepage = "https://landerox.github.io/engineering-standards"
Repository = "https://github.com/landerox/engineering-standards"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docs"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
]
ignore = [
    "E501",    # line too long (formatter handles this)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["docs"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
